<?xml version="1.0"?>
<package format="2">
  <name>aikido_perception</name>
  <version>1.0.0</version>
  <description>
    Perception for KIDO.
  </description>
  <maintainer email="shushmanchoudhury@gmail.com">Shushman Choudhury</maintainer>
  <author email="shushmanchoudhury@gmail.com">Shushman Choudhury</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>dart</depend>
  <depend>boost</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
</package>
